--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7812,8 +7812,7 @@
     <string name="label_global_roaming_settings">Roaming Settings</string>
     <string name="set_data_time_range">Show time range</string>
 
-    <!-- StorageCleaner Settings -->
-    <string name="storage_menu_cleanup">Storage Cleanup</string>
+    <string name="profiles_settings_title">System profiles</string>
     <string name="select_sim_card">Select SIM card</string>
 
     <string name="mbn_version">MBN version</string>
